1. Add robots.txt 2. Change tucao to img title 3. Fix large pic modal vertical center alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
+  background-color: #eee;
   font-family: Cambria, Georgia, serif;
   font-size: 14px;
   overflow-x: hidden;
@@ -87,7 +88,12 @@ a:hover, a: active {
   z-index: 2;
 }
 #large-image {
-  margin: auto auto;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   border-radius: 8px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
